IVYPORTAL-8521: Needed features for release 8.0 - Fixed UI: input field of task/case widget not well aligned

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -333,6 +333,7 @@ body .ui-selectcheckboxmenu-panel .ui-selectcheckboxmenu-header .ui-selectcheckb
   color: black;
   font-size: 1.4rem;
   width: 100%;
+  padding: 6px 0 6px 6px !important;
 }
 
 .widget-header-filter-input.ui-inputfield.ui-state-hover, .widget-header-filter-input.ui-inputfield.ui-state-focus {
@@ -894,7 +895,6 @@ a.case-details-document-add-link, a.task-details-document-add-link, span.case-de
 .case-widget-container .widget-column-header,
 .case-default-widget-container .widget-column-header {
   flex: 1 0 100%;
-  height: 30px;
   display: flex;
   align-items: flex-end;
   line-height: normal;
@@ -1866,6 +1866,7 @@ _:-ms-input-placeholder, :root .express-process-logo .ui-panel-content {
 
 .task-widget .sort-task-menu {
   width: 100%;
+  margin-top: 8px;
 }
 
 .task-widget .filter-add-container {
