--- a/AxonIvyPortal/PortalTemplate/webContent/resources/css/template.css
+++ b/AxonIvyPortal/PortalTemplate/webContent/resources/css/template.css
@@ -343,10 +343,6 @@
   margin-top: 10px;
 }
 
-.search-results-tabview .widget-sort-menu.full-mode.task-in-search, .search-results-tabview .widget-column-header.case-in-search {
-  height: 30px;
-}
-
 .case-template-content .case-list-item {
   width: 100%;
   margin: 20px 0 0 0;
